JP GENERATION - FAQ BUILDING

--- a/plne-responzivny-web/jpgeneration/sluzby/digitalna-strategia.html
+++ b/plne-responzivny-web/jpgeneration/sluzby/digitalna-strategia.html
@@ -111,19 +111,18 @@
             <i aria-hidden="true" class="fa fa-home" id="con-ser-icon1"></i>
             <h3>Analýza firmy</h3>
             <span class="spacer2"></span>
-            <p class="con-ser-p">Analýza poskytovaných produktov a služieb. Analýza silných a slabých stránok firmy +
-                príležitostí a rizík klienta…</p>
+            <p class="con-ser-p">Komplexná analýza vašej firmy: Zhodnotíme poskytované produkty a služby, identifikujeme silné a slabé stránky vášho podnikania a analyzujeme príležitosti a riziká pre vašich klientov. Poskytneme vám podrobný prehľad, aby ste lepšie pochopili súčasný stav a možnosti rozvoja.</p>
         </div>
         <div>
             <i aria-hidden="true" class="fa fa-users" id="con-ser-icon2"></i>
             <h3>Analýza zákazníkov</h3>
             <span class="spacer2"></span>
-            <p class="con-ser-p">Analýza zákazníka z pohľadu zákazníka ktorá Vám pomôže pochopiť jeho potreby. Čo ho motivuje využívať Vaše produkty alebo služby a čo ho naopak odrádza…</p>
+            <p class="con-ser-p">Segmentácia zákazníkov. Pomôžeme vám identifikovať rôzne segmenty zákazníkov, ktoré by mohli mať odlišné potreby a preferencie. Týmto spôsobom budete môcť lepšie cieliť svoje marketingové aktivity a prispôsobiť svoje produkty alebo služby jednotlivým segmentom.</p>
         </div>
         <div>
             <i aria-hidden="true" class="fa fa-bar-chart" id="con-ser-icon3"></i>
             <h3>Vyhodnotenie analýz</h3>
-            <p class="con-ser-p">Vyhotovíme Vám report ktorý bude obsahovať informácie o Vašej firme a zákazníkoch…</p>
+            <p class="con-ser-p">Report o firme a zákazníkoch. Vypracujeme pre vás podrobný report, ktorý zhrnie výsledky analýz vašej firmy a zákazníkov. Poskytneme vám cenné informácie o súčasnom stave, trendoch a odporúčania pre ďalší rozvoj.</p>
         </div>
     </section>
     <section class="content-ser-2">
@@ -131,25 +130,24 @@
             <i aria-hidden="true" class="fa fa-arrow-up" id="con-ser-icon4"></i>
             <h3>Nastavenie cieľov</h3>
             <span class="spacer2"></span>
-            <p class="con-ser-p">Pri nastavení cieľov je potrebné sa zamyslieť či sú krátkodobé alebo dlhodobé. Pri výbere stratégie je to veľmi dôležite či bude trvať 1 mesiac alebo 1 rok…</p>
+            <p class="con-ser-p">Nastavenie krátkodobých a dlhodobých cieľov. Pomôžeme vám definovať jasné a merateľné ciele pre váš podnik. Bez ohľadu na to, či ide o krátkodobé alebo dlhodobé ciele, pomôžeme vám ich vypracovať a vytvoriť stratégiu na ich dosiahnutie.</p>
         </div>
         <div>
             <i aria-hidden="true" class="fa-solid fa-tablet-screen-button" id="con-ser-icon5"></i>
             <h3>Nastavenie stratégie</h3>
-            <p class="con-ser-p">Nastavenie marketingovej, biznisovej a digitálnej kampane priamo pre Vaše potreby…</p>
+            <p class="con-ser-p">Vytvorenie marketingovej, biznisovej a digitálnej stratégie. Na základe analýzy vašej firmy a zákazníkov vytvoríme špecifickú stratégiu pre vaše potreby. Pomôžeme vám vytvoriť efektívne marketingové a biznisové kampane a navrhneme digitálne riešenia, aby ste dosiahli svoje ciele.</p>
         </div>
         <div>
             <i aria-hidden="true" class="fa fa-calculator" id="con-ser-icon6"></i>
             <h3>Vyhodnotenie stratégie</h3>
-            <p class="con-ser-p">Vyhotovenie reportu ktorý porovná produkty alebo firmu pred začiatkom digitálnej stratégie a po nastavenom období…</p>
+            <p class="con-ser-p">Porovnanie pred a po. Vypracujeme report, ktorý porovná vaše produkty alebo firmu pred začiatkom implementácie digitálnej stratégie a po uplynutí určeného obdobia. Týmto spôsobom zistíte účinnosť stratégie a získate cenné poznatky pre budúce rozhodnutia.</p>
         </div>
     </section>
     <section class="content-ser-3">
         <div>
             <i aria-hidden="true" class="fa fa-microphone-slash" id="con-ser-icon7"></i>
             <h3>Diskrétnosť</h3>
-            <p class="con-ser-p">Nemusíte sa báť že Vám niečo unikne. Vaše interné informácie nepoužijeme v podklade pre
-                iné firmy alebo pre naše portfólio…</p>
+            <p class="con-ser-p">Nemusíte sa obávať utajenia informácií. Vaše interné informácie budeme zachovávať v úplnej dôvere. Nevyužijeme ich pre iné firmy alebo pre naše portfólio.</p>
         </div>
         <section class="spacer-div"></section>
         <section class="spacer-div"></section>
@@ -185,36 +183,36 @@
             </div>
             <div class="faq-menu">
                 <div class="menu-1">
-                    <button class="accordion"><span class="btn-text">Ako prebieha realizácia služby a kde sa fotografovanie udalosti alebo stretnutia uskutočňujú?</span></button>
+                    <button class="accordion"><span class="btn-text">Ako čiastočne prebieha realizácia služby digitálnej stratégie?</span></button>
                     <div class="panel">
-                        <p>Naša služba fotografie sa realizuje fyzicky na mieste, ktoré si zvolíte. Buďto ide o konkrétnu udalosť, párty, svadbu alebo iné podujatie. Prítomnosť fotografa na mieste zabezpečuje zachytenie dôležitých okamihov a zážitkov. Spoločne môžeme dohodnúť miesto a čas konania.</p>
+                        <p>Realizácia služby digitálnej stratégie začína konzultáciou s klientom, kde sa získavajú informácie o firme, jej produktoch a službách. Na základe týchto informácií sa vykonávajú analýzy, nastavujú ciele a vypracováva sa samotná stratégia.</p>
                     </div>
                 </div>
                 <div class="menu-2">
-                    <button class="accordion"><span class="btn-text">Aký je časový rámec na spracovanie a doručenie upravených fotografií?</span></button>
+                    <button class="accordion"><span class="btn-text">Aké sú možnosti platby za poskytovanú službu digitálnej stratégie?</span></button>
                     <div class="panel">
-                        <p>Po fotení sa vaše fotografie spracujú a upravia tak, aby vynikli ich najlepšie stránky. Časový rámec na spracovanie sa líši v závislosti od rozsahu fotografií a aktuálneho pracovného vyťaženia. Však sa vždy snažíme poskytnúť vám hotové fotografie v čo najkratšom čase, aby ste si ich mohli vychutnať.</p>
+                        <p>Platbu za službu digitálnej stratégie je možné vykonať prevodom na náš bankový účet. Presné podrobnosti o platbe a fakturácii vám poskytneme vopred po dohode.</p>
                     </div>
                 </div>
                 <div class="menu-3">
-                    <button class="accordion"><span class="btn-text">Aké sú možnosti platby za poskytované služby a akceptujete kreditné karty?</span>
+                    <button class="accordion"><span class="btn-text">Aký je časový rámec pre dodanie služby digitálnej stratégie?</span>
                     </button>
                     <div class="panel">
-                        <p>Platbu za naše služby je možné vykonať buď prevodom na náš účet, alebo v hotovosti pri samotnej realizácii služby. Momentálne neposkytujeme možnosť platby kreditnými kartami, ale všetky podrobnosti o platbe vám radi poskytneme vopred, aby ste mali všetko pripravené.</p>
+                        <p>Časový rámec pre dodanie služby digitálnej stratégie závisí od rozsahu projektu a jeho komplexity. Po dôkladnej analýze vašich potrieb a požiadaviek vám poskytneme konkrétny odhad času, ktorý bude potrebný na realizáciu.</p>
                     </div>
                 </div>
                 <div class="menu-4">
-                    <button class="accordion"><span class="btn-text">Poskytujete tlačené fotografie a ak áno, aký je proces a cenník?</span>
+                    <button class="accordion"><span class="btn-text">Aký je obsah reportu pri vyhodnotení digitálnej stratégie?</span>
                     </button>
                     <div class="panel">
-                        <p>Áno, poskytujeme aj tlačené fotografie. V prípade záujmu o tlačené exempláre fotografii sa dohodneme na konkrétnych požiadavkách a objednávke. Vzhľadom na rôznorodosť formátov, veľkostí a materiálov je cenník tlačených fotografií individuálny a závisí od vašich konkrétnych požiadaviek.</p>
+                        <p>Report pri vyhodnotení stratégie zahŕňa informácie o vašej firme, analýze zákazníkov, nastavení cieľov a samotnej stratégii. Poskytuje prehľad o dosiahnutých výsledkoch a pomáha zhodnotiť úspech stratégie.</p>
                     </div>
                 </div>
                 <div class="menu-5">
-                    <button class="accordion"><span class="btn-text">Ako dlho budú upravené fotografie uchované na cloudovom úložisku po ich odovzdaní?</span>
+                    <button class="accordion"><span class="btn-text">Čo všeobecne zahŕňa dodanie služby digitálnej stratégie?</span>
                     </button>
                     <div class="panel">
-                        <p>Po spracovaní a odovzdaní upravených fotografií vám poskytneme prístup na cloudové úložisko, kde budú vaše fotografie uchované počas 30 dní. Počas tohto obdobia máte možnosť si fotografie stiahnuť a zálohovať ich na vlastnom zariadení. Po uplynutí 30 dní môžeme fotografiu z cloudového úložiska odstrániť, aby sme uvoľnili miesto pre ďalšie projekty.</p>
+                        <p>Dodanie služby digitálnej stratégie zahŕňa vykonanie analýz, vypracovanie a nastavenie stratégie, prípadne vytvorenie marketingových a biznisových kampaní. Celý proces je zameraný na dosiahnutie vašich cieľov a rast vášho podnikania.</p>
                     </div>
                 </div>
             </div>
