--- a/plne-responzivny-web/jpgeneration/sluzby/sprava-domeny-a-hostingu.html
+++ b/plne-responzivny-web/jpgeneration/sluzby/sprava-domeny-a-hostingu.html
@@ -110,49 +110,46 @@
         <div>
             <i aria-hidden="true" class="fa-solid fa-cart-shopping" id="con-ser-icon1"></i>
             <h3>Máme vlastnú domenu</h3>
-            <p class="con-ser-p">Maté vlastnú domenu? Neviete ako ju spravovať? Nevadi urobime to za Vás…</p>
+            <p class="con-ser-p">Správa vlastnej domény. Máte vlastnú doménu, ale neviete, ako ju spravovať? Neobávajte sa, vezmeme to na seba. Zabezpečíme kompletnú správu a údržbu vašej domény, aby ste nemuseli strácať čas a energiu na technické záležitosti.</p>
         </div>
         <div>
             <i aria-hidden="true" class="fa-solid fa-database" id="con-ser-icon2"></i>
             <h3>Máme vlastný hosting</h3>
-            <p class="con-ser-p">Po spustený webu Vám zanechali prihlasovacie údaje a nevie čo s tým? Každé jedno
-                nastavenie je pre Vás neznáme? Nechajte to na Nás…</p>
+            <p class="con-ser-p">Správa hostingových údajov. Po spustení vášho webu ste dostali prihlasovacie údaje a neviete, ako s nimi ďalej pracovať? Nechajte to na nás. Zabezpečíme kompletnú správu vašich hostingových údajov, vrátane nastavenia, zálohovania a monitorovania, aby váš web fungoval spoľahlivo a bez problémov.</p>
         </div>
         <div>
             <i aria-hidden="true" class="fa fa-clock-o" id="con-ser-icon3"></i>
             <h3>Ušetríme Vám čas</h3>
-            <p class="con-ser-p">Postaráme sa Vám o bezstarostný chod domény a hostingu aby ste vedeli využiť svoj čas na podstatnejšie veci…</p>
+            <p class="con-ser-p">Bezstarostný chod domény a hostingu. S našou pomocou sa nemusíte zaoberať technickými záležitosťami týkajúcimi sa domény a hostingu. Zabrániť problémom a neefektívnemu využitiu času je našou prioritou, aby ste sa mohli sústrediť na dôležitejšie aspekty vášho podnikania.</p>
         </div>
     </section>
     <section class="content-ser-2">
         <div>
             <i aria-hidden="true" class="fa fa-wrench" id="con-ser-icon4"></i>
             <h3>Optimalizácia webu</h3>
-            <p class="con-ser-p">Skontrolujeme či všetko je nastavené správne od základov…</p>
+            <p class="con-ser-p">Kompletná kontrola nastavení. Skontrolujeme všetky aspekty vášho webu a zabezpečíme, aby boli správne nastavené od základov. To zahŕňa rýchlosť načítania, responsivitu, SEO optimalizáciu a ďalšie faktory, ktoré ovplyvňujú výkon a používateľskú skúsenosť.</p>
         </div>
         <div>
             <i aria-hidden="true" class="fa fa-tasks" id="con-ser-icon5"></i>
             <h3>Optimalizácia servera</h3>
-            <p class="con-ser-p">Zdá sa Vám že web je pomalý? Postaráme sa o to aby Váš zákazník mal pôžitok z návštevy Vašeho webu…</p>
+            <p class="con-ser-p">Zlepšenie výkonu webu. Ak sa zdá, že váš web je pomalý, nechajte to na nás. Postaráme sa o optimalizáciu servera, aby sa zabezpečila rýchlejšia a plynulejšia návšteva vášho webu. Vaši zákazníci budú mať lepší zážitok a budú sa radi vracať.</p>
         </div>
         <div>
             <i aria-hidden="true" class="fa fa-shield" id="con-ser-icon6"></i>
             <h3>Kontrola zabezpečenia</h3>
-            <p class="con-ser-p">Skontrolujeme Váš kód, SSL certifikát, dáta, antispam, použivanie cookie a GDPR. Aby sa
-                Váš klient cítil na Vašom webe bezpečne…</p>
+            <p class="con-ser-p">Dôkladná kontrola bezpečnosti: Skontrolujeme váš kód, SSL certifikát, dáta, antispam opatrenia, používanie súborov cookie a zhody s GDPR. Našim cieľom je zabezpečiť, aby sa vaši klienti cítili na vašom webe bezpečne a dôverovali mu.</p>
         </div>
     </section>
     <section class="content-ser-3">
         <div>
             <i aria-hidden="true" class="fa fa-cloud-upload" id="con-ser-icon7"></i>
             <h3>Prenos dát ku nám</h3>
-            <p class="con-ser-p">Nespoľahlivý alebo pomaly hosting? Bezproblémovo a bez nutnosti odstávky webu prenesieme Vaše dáta bezpečne na spoľahlivý hosting…</p>
+            <p class="con-ser-p">Bezproblémový prenos dát. Ak máte problémy s nespoľahlivým alebo pomalým hostingom, môžeme bezpečne a bez nutnosti odstávky preniesť vaše dáta na spoľahlivý hosting. Zabezpečíme hladký prechod, aby ste mohli pokračovať v prevádzke vášho webu bez prerušenia.</p>
         </div>
         <div>
             <i aria-hidden="true" class="fa fa-medkit" id="con-ser-icon8"></i>
             <h3>24/7 Podpora</h3>
-            <p class="con-ser-p">Neočakávaná chyba môže nastať vždy. Preto sme tu pre Vás 24/7 aby Váš biznis mohol
-                rásť…</p>
+            <p class="con-ser-p">Neustála podpora. Vždy sa môže vyskytnúť neočakávaná chyba. Preto sme tu pre vás 24/7, aby sme vám poskytli podporu a riešili akékoľvek problémy. Vaše podnikanie nezastaví žiadna technická výzva, pretože sme tu, aby sme vám pomohli rásť.</p>
         </div>
         <section class="spacer-div"></section>
     </section>
@@ -187,36 +184,36 @@
             </div>
             <div class="faq-menu">
                 <div class="menu-1">
-                    <button class="accordion"><span class="btn-text">Ako prebieha realizácia služby a kde sa fotografovanie udalosti alebo stretnutia uskutočňujú?</span></button>
+                    <button class="accordion"><span class="btn-text">Ako nám môžete pomôcť so správou mojej vlastnej domény?</span></button>
                     <div class="panel">
-                        <p>Naša služba fotografie sa realizuje fyzicky na mieste, ktoré si zvolíte. Buďto ide o konkrétnu udalosť, párty, svadbu alebo iné podujatie. Prítomnosť fotografa na mieste zabezpečuje zachytenie dôležitých okamihov a zážitkov. Spoločne môžeme dohodnúť miesto a čas konania.</p>
+                        <p>Poskytujeme asistenciu pri nastavení DNS záznamov, predĺžení platnosti a ďalších úpravách vašej domény. Stačí nám poskytnúť prístupové údaje a budeme sa postarať o zvyšok.</p>
                     </div>
                 </div>
                 <div class="menu-2">
-                    <button class="accordion"><span class="btn-text">Aký je časový rámec na spracovanie a doručenie upravených fotografií?</span></button>
+                    <button class="accordion"><span class="btn-text">Čo presnejšie robíte so správou nášho hostingu vo vlastnej režií?</span></button>
                     <div class="panel">
-                        <p>Po fotení sa vaše fotografie spracujú a upravia tak, aby vynikli ich najlepšie stránky. Časový rámec na spracovanie sa líši v závislosti od rozsahu fotografií a aktuálneho pracovného vyťaženia. Však sa vždy snažíme poskytnúť vám hotové fotografie v čo najkratšom čase, aby ste si ich mohli vychutnať.</p>
+                        <p>Ak nám poskytnete prihlasovacie údaje k vášmu hostingovému účtu, zabezpečíme nastavenie vášho webu, nahratie súborov, vytvorenie e-mailových kont a ďalšie technické úpravy podľa vašich požiadaviek.</p>
                     </div>
                 </div>
                 <div class="menu-3">
-                    <button class="accordion"><span class="btn-text">Aké sú možnosti platby za poskytované služby a akceptujete kreditné karty?</span>
+                    <button class="accordion"><span class="btn-text">Ako by ste nám ušetrili čas pri správe domény a hostingu?</span>
                     </button>
                     <div class="panel">
-                        <p>Platbu za naše služby je možné vykonať buď prevodom na náš účet, alebo v hotovosti pri samotnej realizácii služby. Momentálne neposkytujeme možnosť platby kreditnými kartami, ale všetky podrobnosti o platbe vám radi poskytneme vopred, aby ste mali všetko pripravené.</p>
+                        <p>Prevezmeme na seba starosti s údržbou a správou vášho doménového a hostingového prostredia, aby ste mohli sústrediť svoj čas na dôležitejšie úlohy vo vašom podnikaní.</p>
                     </div>
                 </div>
                 <div class="menu-4">
-                    <button class="accordion"><span class="btn-text">Poskytujete tlačené fotografie a ak áno, aký je proces a cenník?</span>
+                    <button class="accordion"><span class="btn-text">Aké sú možnosti platby za službu správy domény a hostingu?</span>
                     </button>
                     <div class="panel">
-                        <p>Áno, poskytujeme aj tlačené fotografie. V prípade záujmu o tlačené exempláre fotografii sa dohodneme na konkrétnych požiadavkách a objednávke. Vzhľadom na rôznorodosť formátov, veľkostí a materiálov je cenník tlačených fotografií individuálny a závisí od vašich konkrétnych požiadaviek.</p>
+                        <p>Platbu za službu správy domény a hostingu môžete uskutočniť prevodom na náš bankový účet. Presné podrobnosti o platbe a fakturácii vám poskytneme vopred po dohode.</p>
                     </div>
                 </div>
                 <div class="menu-5">
-                    <button class="accordion"><span class="btn-text">Ako dlho budú upravené fotografie uchované na cloudovom úložisku po ich odovzdaní?</span>
+                    <button class="accordion"><span class="btn-text">Poskytujete 24/7 podporu pre prípad neočakávaných chýb?</span>
                     </button>
                     <div class="panel">
-                        <p>Po spracovaní a odovzdaní upravených fotografií vám poskytneme prístup na cloudové úložisko, kde budú vaše fotografie uchované počas 30 dní. Počas tohto obdobia máte možnosť si fotografie stiahnuť a zálohovať ich na vlastnom zariadení. Po uplynutí 30 dní môžeme fotografiu z cloudového úložiska odstrániť, aby sme uvoľnili miesto pre ďalšie projekty.</p>
+                        <p>Áno, sme tu pre vás 24/7, aby sme vám pomohli v prípade technických otázok alebo problémov s doménou a hostingom. Stačí nám kontaktovať a postaráme sa o rýchle riešenie.</p>
                     </div>
                 </div>
             </div>
