--- a/plne-responzivny-web/jpgeneration/cennik/cena-digitalna-strategia.html
+++ b/plne-responzivny-web/jpgeneration/cennik/cena-digitalna-strategia.html
@@ -225,6 +225,10 @@
             <p class="order-text"></p>
         </div>
     </section>
+    <section class="content-ser-line">
+        <div>
+        </div>
+    </section>
 </section>
 <br>
 <br>
@@ -368,6 +372,7 @@
 <!-------------JAVA SCRIPT-------------->
 <script src="../../js/nav.js" type="text/javascript"></script>
 <script src="../../js/dropdown-nav.js" type="text/javascript"></script>
+<script src="../../js/acordion-faq.js" type="text/javascript"></script>
 <script crossorigin="anonymous" src="https://kit.fontawesome.com/6d4730ed07.js"></script>
 </body>
 </html>
