--- a/plne-responzivny-web/jpgeneration/cennik/cena-graficky-dizajn.html
+++ b/plne-responzivny-web/jpgeneration/cennik/cena-graficky-dizajn.html
@@ -564,6 +564,10 @@
             </div>
         </div>
     </section>
+    <section class="content-ser-line">
+        <div>
+        </div>
+    </section>
 </section>
 <br>
 <br>
@@ -707,6 +711,7 @@
 <!-------------JAVA SCRIPT-------------->
 <script src="../../js/nav.js" type="text/javascript"></script>
 <script src="../../js/dropdown-nav.js" type="text/javascript"></script>
+<script src="../../js/acordion-faq.js" type="text/javascript"></script>
 <script crossorigin="anonymous" src="https://kit.fontawesome.com/6d4730ed07.js"></script>
 </body>
 </html>
